--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body{
 
 .container{
   width: 100%;
-  background: url('images/Recipe image.jpeg');
+  background: url('Recipe image.jpeg');
   padding: 200px 100px;
   background-position: center;
   background-size: cover;
@@ -164,4 +164,5 @@ body{
     }
     .container h1{font-size: 28px;}
     .container p{font-size: 16px;}
+
 }
